# usb_hid

./: CMakeLists.txt  Makefile  hid_sync_led_control.h  main.c  usb_config.h  usb_host.c
ascii_keyb/: ReadMe.txt  fifo.c  fifo.h  ps2interface.c  ps2interface.h  ps2keyboard.c  ps2keyboard.h  ps2mouse.c  types.h
